--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal-image": "^2.6.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
