--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-html5-camera-photo": "^1.5.11",
