--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
